# evennia-yaml-reader

./: CLAUDE.md  README.md  pyproject.toml  runtests.py
DESIGN/: INDEX.md  documentation-structure.md  progress.md  reader-api.md
DESIGN/archive/: README.md
docs/: INDEX.md  documentation-structure.md  progress.md
docs/archive/: README.md
src/evennia_yaml_reader/: __init__.py  base.md  base.py  errors.py  github.py  local.py  tests.py
tests/: README.md
