[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "evennia-yaml-reader"
version = "0.0.1"
description = "Source-agnostic YAML file reader for declarative-content libraries in the Evennia ecosystem."
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [{name = "Tim Baird"}]
requires-python = ">=3.10"
# Deliberate divergence from LIBRARY_STANDARDS: this library is a pure-Python
# primitive with no Evennia runtime dependency. See CLAUDE.md principle 5.
dependencies = [
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["evennia_yaml_reader*"]
